feat: :sparkles: update PostgreSQL database name and port mapping in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: liquibasedb
     ports:
-      - "5435:5432"
+      - "5432:5432"
