feat: :sparkles: update PostgreSQL datasource URL and add Liquibase changelog configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=a-simple-app-with-liquibase-poc
 
 # postgres
-spring.datasource.url=jdbc:postgresql://localhost:5435/mydatabase
+spring.datasource.url=jdbc:postgresql://localhost:5432/liquibasedb
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,3 +13,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # liquibase
+
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
