--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changes/v1_create_teacher_table_changelog.yaml
+  - include:
+      file: db/changelog/changes/v1_create_director_table_changelog.yaml
