feat: :refactor: add other properties in liquibase.properties and update readme

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,7 +1,12 @@
-
-
-
-
 changeLogFile=db/changelog/db.changelog-master.yaml
-url=jdbc:postgresql://localhost:5432/liquibasedb
 driver=org.postgresql.Driver
+# propriedades comentadas pois são passadas direto no comando de rollback para não expor no github
+# mvn liquibase:rollback
+# -Dliquibase.changeLogFile=src/main/resources/db/changelog/db.changelog-master.yaml
+# -Dliquibase.url=jdbc:postgresql://localhost:5432/liquibasedb
+# -Dliquibase.username=user
+# -Dliquibase.password=password
+# -Dliquibase.rollbackTag=001-tag-create-teacher
+#username=user
+#password=password
+#driver=org.postgresql.Driver
